import 'package:flutter/material.dart';
import 'package:my_coctails_bar/navigation/main_screen.dart';
import 'package:shared_preferences/shared_preferences.dart';

class FirstScreen extends StatelessWidget {
  const FirstScreen({super.key = const Key('first_screen')});

  @override
  Widget build(BuildContext context) {
    final screenHeight = MediaQuery.of(context).size.height;

    return Scaffold(
...
              "Scan your ingredients’ barcodes to get\nrecipes based on what you have",
              style: Theme.of(context).textTheme.bodySmall,
              textAlign: TextAlign.center,
            ),
            SizedBox(height: screenHeight * 0.035),
            ElevatedButton(
              key: const Key('intro_forward_button'),
              style: ElevatedButton.styleFrom(
                backgroundColor: Colors.transparent, // Sfondo trasparente
                shadowColor: Colors.transparent, // Nessuna ombra
              ),
              onPressed: () async {
                final prefs = await SharedPreferences.getInstance();
...
