...
import 'package:my_coctails_bar/providers/fav_cocktail.dart';
import 'package:my_coctails_bar/screen/cocktail_screen.dart';
import 'package:my_coctails_bar/widget/coktail_tile.dart';
import 'package:my_coctails_bar/widget/header.dart';

class FavCocktail extends ConsumerWidget {
  const FavCocktail({super.key = const Key('favorites_screen')});

  @override
  Widget build(BuildContext context, WidgetRef ref) {
    final screenWidth = MediaQuery.of(context).size.width;
    final cocktails = ref.watch(favoriteCocktailsProvider);

...
