...
import 'package:my_coctails_bar/providers/user_ingredient.dart';
import 'package:my_coctails_bar/screen/scanner.dart';
import 'package:my_coctails_bar/widget/ingredient_tile.dart';
import 'package:my_coctails_bar/widget/header.dart';

class Ingredients extends ConsumerWidget {
  const Ingredients({super.key = const Key('ingredients_screen')});

  @override
  Widget build(BuildContext context, WidgetRef ref) {
    final screenWidth = MediaQuery.of(context).size.width;
    final screenHeight = MediaQuery.of(context).size.height;
    final ingredients = ref.watch(userIngredientsProvider);
...
